# Paper_Reach

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SKILL.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
docs/: agent-integration.md  architecture.md  browser-cookies.md  github-release-v0.1.0.md  install.md  publishing.md  release-notes-v0.1.0.md  roadmap.md  usage.md
examples/: README.md
examples/agent-recipes/: README.md
examples/auth/: cookies.example.json  headers.example.json
examples/china_disaster_exposure/: README.md  query.json
paper_reach/: __init__.py  cli.py  config.py  io_utils.py  models.py  retrieval.py  summarize.py  workflow.py
paper_reach/channels/: __init__.py  arxiv.py  base.py  local_files.py  mock_source.py  openalex.py
paper_reach/fetchers/: __init__.py  base.py  open_access.py  utils.py
paper_reach/parsers/: __init__.py  base.py  pymupdf_parser.py  simple_text_parser.py
paper_reach/ranking/: __init__.py  profiles.py  rubric.py
paper_reach/schemas/: paper_result.schema.json  query_input.schema.json
scripts/: check-install.sh  sync.sh
skills/paper-ranker/: SKILL.md  scoring.md
skills/paper-reader/: SKILL.md  schema.json
skills/paper-search/: SKILL.md  rubric.md
tests/: test_fetchers.py  test_models.py  test_retrieval.py  test_rubric.py  test_summarize.py  test_workflow.py
(+9 files in other folders)
